--- a/public/index.html
+++ b/public/index.html
@@ -36,7 +36,9 @@
             <br>
             <br>
             </p>
-            <p class="w3-medium">View GitHub source <a class="w3-medium" href="https://github.com/binary-person/womginx" target="_blank">here</a></p>
+            <span class="w3-medium">Legal stuff: </span>
+            <p class="w3-medium">View Forked GitHub source <a class="w3-medium" href="https://github.com/binary-person/womginx" target="_blank">here</a></p>
+            <p class="w3-medium">View Original GitHub source <a class="w3-medium" href="https://github.com/binary-person/womginx" target="_blank">here</a></p>
         </div>
     </div>
 </body>
