add padding to top of the page

--- a/public/index.html
+++ b/public/index.html
@@ -11,8 +11,13 @@
     <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
     <link rel="shortcut icon" type="image/png" href="favicon.png" />
     <title>Classes</title>
-    <style>
-    p { margin: 2px 0;}
+    <style type="text/css">
+    p {
+     margin: 2px 0;
+     }
+    body {
+    margin:200px
+    }
     </style>
 </head>
 
